--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,6 +28,7 @@
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.fullPath("angular-cookies", "angular-cookies.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-material.js"))'></script>
 		<script type="text/javascript" src='@routes.Assets.at("javascripts/controllers.module.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("javascripts/services.module.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("javascripts/app.js")'></script>
 
 		<!-- Features -->
@@ -36,21 +37,23 @@
 		<script type="text/javascript" src='@routes.Assets.at("features/home-page/home-page.controller.js")'></script>
 
 		<!-- Common -->
-		<script type="text/javascript" src='@routes.Assets.at("features/common/header.directive.js")'></script>
 		<link rel="stylesheet" href='@routes.Assets.at("features/common/header.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/common/header.directive.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/common/flash.service.js")'></script>
 
 		<!-- Side-Menu -->
-		<script type="text/javascript" src='@routes.Assets.at("features/side-menu/side-menu.directive.js")'></script>
 		<link rel="stylesheet" href='@routes.Assets.at("features/side-menu/side-menu.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/side-menu/side-menu.directive.js")'></script>
 
 		<!-- Section-Navigation -->
-		<script type="text/javascript" src='@routes.Assets.at("features/section-navigation/section-navigation-button.directive.js")'></script>
 		<link rel="stylesheet" href='@routes.Assets.at("features/section-navigation/section-navigation-button.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/section-navigation/section-navigation-button.directive.js")'></script>
+		<link rel="stylesheet" href='@routes.Assets.at("features/section-navigation/main-toolbar.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/section-navigation/main-toolbar.directive.js")'></script>
 
 		<!-- Page-Loader -->
-		<script type="text/javascript" src='@routes.Assets.at("features/page-loader/page-loader.directive.js")'></script>
 		<link rel="stylesheet" href='@routes.Assets.at("features/page-loader/page-loader.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/page-loader/page-loader.directive.js")'></script>
 
 		<!-- Home-Page -->
 		<script type="text/javascript" src='@routes.Assets.at("features/home-page/home-page.controller.js")'></script>
@@ -59,6 +62,7 @@
 		<script type="text/javascript" src='@routes.Assets.at("features/history/history.controller.js")'></script>
 
 		<!-- Login -->
+		<link rel="stylesheet" href='@routes.Assets.at("features/login/login.css")'/>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/authentication.service.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/login.controller.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/register.controller.js")'></script>
