--- a/public/features/section-navigation/section-navigation-button.css
+++ b/public/features/section-navigation/section-navigation-button.css
@@ -1,32 +1,20 @@
 .sec-nav-btn {
     display: block;
-    height: 24px;
-    padding: 0px 20px 0px 20px;
-}
-.sec-nav-btn .primary-title {
-    font-size: 16px;
-    width: 100%;
-    display: inline-block;
-    vertical-align: middle;
-    text-align: left;
-    padding-left: 25px;
-    background-repeat: no-repeat;
-    background-position: top left;
-    background-size: contain;
-    cursor: pointer;
-    background-color: transparent;
-}
-.sec-nav-btn .primary-body {
+    width: 30px;
+    height: 43px;
     background-repeat: no-repeat;
     background-position: top center;
-    display: block;
-    width: 100%;
-    min-height: 70px;
+    background-size: contain;
+    cursor: pointer;
+    background-color: white;
+    border: thin solid #E0E0E0;
+    border-radius: 4px;
+    padding: 0px 6px 6px 6px;
+    border-top: none;
+    margin-left: 10px;
+    margin-right: 10px;
+    opacity: 0.3;
 }
-.sec-nav-btn .text-content {
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    padding: 4px 4px 4px 4px;
+.sec-nav-btn:hover {
+    opacity: 1;
 }
-
