Registration functionality Adding javax.mail to build.sbt Starting work on send mail API

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -65,6 +65,7 @@
 		<link rel="stylesheet" href='@routes.Assets.at("features/login/login.css")'/>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/authentication.service.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/login.controller.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("features/login/logout.controller.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/register.controller.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/login/user.service.js")'></script>
 
