--- a/public/features/navbar/navbar-button.css
+++ b/public/features/navbar/navbar-button.css
@@ -16,11 +16,11 @@
 }
 .sec-nav-hdr-show {
     opacity: 1;
-    transition: 1s ease;
+    transition: 0.5s ease;
 }
 .sec-nav-hdr-hide {
     opacity: 0;
-    transition: 1s ease;
+    transition: 0.5s ease;
 }
 .sec-nav-btn {
     display: block;
@@ -38,9 +38,11 @@
     margin-left: 4px;
     margin-right: 4px;
     opacity: 0.3;
-    transition: 1s ease;
+    transition: 0.5s ease;
 }
 .sec-nav-btn:hover {
     opacity: 1;
-    transition: 1s ease;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    transition: 0.5s ease;
 }
