Removed HalBuilder and replaced with Dtos.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -81,6 +81,7 @@
 		<!-- Parish Council -->
 		<link rel="stylesheet" href='@routes.Assets.at("features/parish-council/parish-council.css")'/>
 		<script type="text/javascript" src='@routes.Assets.at("features/parish-council/parish-council.controller.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("features/parish-council/parish-council.services.js")'></script>
 
 
 	</head>
