--- a/app/views/notFoundPage.scala.html
+++ b/app/views/notFoundPage.scala.html
@@ -14,7 +14,7 @@
       <link rel='stylesheet' href='@routes.WebJarAssets.at(webJarAssets.locate("css/bootstrap-theme.css"))'>
       <link rel="stylesheet" href="@routes.Assets.at("css/font-awesome-4.6.3/css/font-awesome.css")"/>
       <link rel="stylesheet" href="@routes.Assets.at("css/OpenSans.css")"/>
-      <link rel="stylesheet" href="@routes.Assets.at("public/stylesheets/main.css")"/>
+      <link rel="stylesheet" href="@routes.Assets.at("css/main.css")"/>
 
     </head>
 
@@ -28,6 +28,8 @@
               <div>
                 Sorry, but the page you are looking for has not been found.<br>
                 Please check the URL (in the top of your browser) for any obvious errors.
+                <br><br>
+                <a href="web">Click here to return the Horsley Parish Home Page</a>
               </div>
             </div>
 
