--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -56,9 +56,9 @@
 		<script type="text/javascript" src='@routes.Assets.at("features/navbar/navbar-button.directive.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/navbar/navbar.directive.js")'></script>
 
-		<!-- Page-Loader -->
-		<link rel="stylesheet" href='@routes.Assets.at("features/page-loader/page-loader.css")'/>
-		<script type="text/javascript" src='@routes.Assets.at("features/page-loader/page-loader.directive.js")'></script>
+		<!-- Page-Tabs -->
+		<link rel="stylesheet" href='@routes.Assets.at("features/page-tabs/page-tabs.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/page-tabs/page-tabs.directive.js")'></script>
 
 		<!-- Home-Page -->
 		<script type="text/javascript" src='@routes.Assets.at("features/home-page/home-page.controller.js")'></script>
