--- a/public/features/navbar/navbar-button.css
+++ b/public/features/navbar/navbar-button.css
@@ -30,7 +30,7 @@
     background-position: center center;
     background-size: 50%;
     cursor: pointer;
-    background-color: white;
+    background-color: #8D6E63;
     border: thin solid #616161;
     border-radius: 4px;
     padding: 0px 12px 4px 12px;
