--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,6 @@ body {
 body #page-wrapper {
     position: relative;
     height: 100%;
-    height: 1500px;
 }
 
 .pace-done #page-wrapper {
@@ -16,10 +15,11 @@ body #page-wrapper {
     transition: all 0.5s;
 }
 .main-container {
-    height: 100%;
-    position:absolute;
-    top:185px;
-    width:100%;
+    position: relative;
+    margin: 0 auto;
+    height: 300px;
+    top:-195px;
+    width:900px;
     display:block;
     background-image: url('/web/img/img-hdr-para-layer3.png');
     background-position: center top;
@@ -27,7 +27,10 @@ body #page-wrapper {
     z-index:4;
 }
 .main-container .main-page {
-    background-color: white;
+    height: 100%;
+}
+.stnd-bg {
+    background-color: #EFEBE9;
 }
 .footer {
     margin-top: 40px;
@@ -44,29 +47,29 @@ body #page-wrapper {
 }
 
 .primary-title {
-    background-color: #689F38;
+    background-color: #F57F17;
     color: white;
     text-align: left;
     font-size: 16px;
     padding: 6px 8px 6px 8px;
 }
 .primary-body {
-    background-color: #FAFAFA;
-    color: #33691E;
+    background-color: white;
+    color: #004D40;
     padding: 4px 4px 4px 4px;
 }
 .primary-border {
     border: solid thin #EEEEEE;
 }
 .admin-title {
-    background-color: #3F51B5;
+    background-color: #FF5722;
     color: white;
     text-align: left;
     font-size: 16px;
     padding: 6px 8px 6px 8px;
 }
 .admin-body {
-    background-color: #E8EAF6;
+    background-color: #FAFAFA;
     color: #33691E;
     padding: 4px 4px 4px 4px;
 }
