--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,7 +30,7 @@ body #page-wrapper {
     height: 100%;
 }
 .stnd-bg {
-    background-color: #EFEBE9;
+    background-color: #EBEBEB;
 }
 .footer {
     margin-top: 40px;
