--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,6 @@ body {
 
 body #page-wrapper {
     position: relative;
-    height: 100%;
 }
 
 .pace-done #page-wrapper {
@@ -27,17 +26,20 @@ body #page-wrapper {
     z-index:4;
 }
 .main-container .main-page {
-    height: 100%;
+
 }
 .stnd-bg {
     background-color: #EBEBEB;
 }
 .footer {
-    margin-top: 40px;
+    display: block;
+    margin-top: 80px;
+    background-color: white;
+    height: 300px;
 }
 .footer-container {
     margin: 0 auto;
-    height: 100px;
+    height: 100%;
     width: 900px;
     padding: 0;
     border-top: solid thin #37474F;
