--- a/public/features/navbar/navbar-button.css
+++ b/public/features/navbar/navbar-button.css
@@ -25,13 +25,12 @@
 .sec-nav-btn {
     display: block;
     width: 50px;
-    height: 43px;
+    height: 50px;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 50%;
+    background-size: 85%;
     cursor: pointer;
-    background-color: #8D6E63;
-    border: thin solid #616161;
+    border: thin solid #E0E0E0;
     border-radius: 4px;
     padding: 0px 12px 4px 12px;
     border-top: none;
