doc uploader changes

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -32,6 +32,7 @@
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.fullPath("angular-aria", "angular-aria.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.fullPath("angular-messages","angular-messages.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("ng-file-upload.min.js"))'></script>
+		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-file-upload.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-material.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("moment.min.js"))'></script>
         <script type="text/javascript" src='@routes.Assets.at("plugins/calendar/angular-bootstrap-calendar.js")'></script>
@@ -44,6 +45,10 @@
 
 		<!-- Home-Page -->
 		<script type="text/javascript" src='@routes.Assets.at("features/home-page/home-page.controller.js")'></script>
+
+		<!-- File-Uploader -->
+		<link rel="stylesheet" href='@routes.Assets.at("features/file-uploader/file-uploader.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/file-uploader/file-uploader.controller.js")'></script>
 
 		<!-- Common Services -->
 		<link rel="stylesheet" href='@routes.Assets.at("features/common/header.css")'/>
