--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -31,8 +31,7 @@
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.fullPath("angular-cookies", "angular-cookies.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.fullPath("angular-aria", "angular-aria.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.fullPath("angular-messages","angular-messages.min.js"))'></script>
-		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("ng-file-upload.min.js"))'></script>
-		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-file-upload.min.js"))'></script>
+		<script type="text/javascript" src='@routes.Assets.at("js/angular-file-upload.min.js")'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-material.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("moment.min.js"))'></script>
         <script type="text/javascript" src='@routes.Assets.at("plugins/calendar/angular-bootstrap-calendar.js")'></script>
