Fixed bug in file uploader and put temp code in Document service to receive file and copy to web directory

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -48,6 +48,7 @@
 		<!-- File-Uploader -->
 		<link rel="stylesheet" href='@routes.Assets.at("features/file-uploader/file-uploader.css")'/>
 		<script type="text/javascript" src='@routes.Assets.at("features/file-uploader/file-uploader.controller.js")'></script>
+		<script type="text/javascript" src='@routes.Assets.at("features/file-uploader/file-uploader.service.js")'></script>
 
 		<!-- Common Services -->
 		<link rel="stylesheet" href='@routes.Assets.at("features/common/header.css")'/>
