--- a/public/features/file-uploader/file-uploader.css
+++ b/public/features/file-uploader/file-uploader.css
@@ -1,12 +1,46 @@
 .upldr-table {
-    width: 700px;
+    width:                      700px;
 }
 .upldr-drop-zone {
-    border: dotted 3px lightgray;
+    border:                     dotted 3px lightgray;
 }
 .nv-file-over {
     border: dotted 3px red;
-} /* Default class applied to drop zones on over */
+}
 .another-file-over-class {
-    border: dotted 3px green;
+    border:                     dotted 3px green;
+}
+
+.upl-container {
+    display:                    -webkit-flex; /* Safari */
+    display:                    flex;
+    -webkit-justify-content:    space-around; /* Safari */
+    justify-content:            space-around;
+    -webkit-align-items:        baseline; /* Safari */
+    align-items:                baseline;
+    -webkit-flex-direction:     row; /* Safari */
+    flex-direction:             row;
+}
+.upl-form {
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+    margin-bottom: 8px;
+}
+.upl-form label {
+    width: 120px;
+    min-width: 120px;
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+}
+.upl-form input {
+    margin: 0;
+    padding: 0;
+    width: 260px;
+}
+.upl-form select {
+    margin: 0;
+    padding: 0;
+    width: 260px;
 }
