--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,6 +114,21 @@ body #page-wrapper {
     font-size: 14px;
     text-align: center;
 }
+.bg-main {
+    background-image: url("/web/img/horsley_from_a46.jpg");
+    background-repeat: no-repeat;
+    background-position: top center;
+    min-width: 900px;
+    min-height: 349px;
+}
+.bg-main-text {
+    align-self: center;
+    color: black;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px 0px 10px 40px;
+}
 .flex-container {
     display: -webkit-flex;
     display: flex;
@@ -134,6 +149,10 @@ body #page-wrapper {
     -webkit-align-items: center;
     justify-content: center;
     -webkit-justify-content: center;
+}
+.flex-cols div {
+    padding: 10px 10px 10px 10px;
+    align-items: center;
 }
 .col-pad-20 {
     width: 20px;
@@ -165,4 +184,7 @@ body #page-wrapper {
 
     /* Support for IE. */
     font-feature-settings: 'liga';
+}
+.text-red-900 {
+    color: #B71C1C;
 }
