--- a/public/features/village-hall/village-hall.css
+++ b/public/features/village-hall/village-hall.css
@@ -24,3 +24,10 @@
     padding-top:10px;
     padding-bottom:5px;
 }
+.vh_bg_cabaret {
+    background-image: url("/web/features/village-hall/img/bg_cabaret.jpg");
+    background-position: top right;
+    background-repeat: no-repeat;
+    background-size: 60%;
+    min-height: 900px;
+}
