Add details of Horsley Court Planning Application Dismissal

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,8 +5,11 @@
 @config= @{play.Play.application().configuration() }
 
 <!DOCTYPE html>
-<html ng-app="horsley" >
+<html ng-app="horsley">
 	<head>
+		<meta charset="utf-8">
+		<meta name="Description" CONTENT="The community website for Horsley Parish, Gloucestershire">
+
 		<title>Horsley Parish, Gloucestershire, Community website</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width"/>
