Add Google verification meta tag

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="Description" CONTENT="The community website for Horsley Parish, Gloucestershire">
-
+		<meta name="google-site-verification" content="nbyjTQkiGZlYdvNNLwxiTv5uk3HI5SMP-PIQtP-msZQ" />
+		
 		<title>Horsley Parish, Gloucestershire, Community website</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width"/>
