Add sitemaps and search engine micro data and ld-json objects

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8">
 		<meta name="Description" CONTENT="The community website for Horsley Parish, Gloucestershire">
 		<meta name="google-site-verification" content="nbyjTQkiGZlYdvNNLwxiTv5uk3HI5SMP-PIQtP-msZQ" />
-		
+
 		<title>Horsley Parish, Gloucestershire, Community website</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width"/>
@@ -41,6 +41,20 @@
 		<script type="text/javascript" src='@routes.Assets.at("js/controllers.module.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("js/services.module.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("js/app.js")'></script>
+
+
+		<script type="application/ld+json">
+			{
+			  "@context": "http://schema.org",
+			  "@type": "Organization",
+			  "url": "http://horsleyparish.co.uk",
+			  "contactPoint": [{
+				"@type": "ContactPoint",
+				"email": "websupport@jonstride.uk",
+				"contactType": "Web support"
+			  }]
+			}
+		</script>
 
 		<!-- Features -->
 
