change shop page to link to mail chimp archive Add initial page template for user admin

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,6 +37,7 @@
 		<script type="text/javascript" src='@routes.Assets.at("js/angular-file-upload.min.js")'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("angular-material.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("moment.min.js"))'></script>
+		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("postscribe.min.js"))'></script>
 
 		<script type="text/javascript" src='@routes.Assets.at("js/controllers.module.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("js/services.module.js")'></script>
@@ -101,6 +102,10 @@
 
 		<!-- Community Shop -->
 		<link rel="stylesheet" href='@routes.Assets.at("features/horsley-community-shop/community-shop.css")'/>
+
+		<!-- User Admin -->
+		<link rel="stylesheet" href='@routes.Assets.at("admin/users/users.css")'/>
+
 
 	</head>
 
