--- a/public/features/horsley-community-shop/community-shop.css
+++ b/public/features/horsley-community-shop/community-shop.css
@@ -13,12 +13,45 @@
     height: 120px;
     margin-bottom: -20px;
 }
-.cs-idocs iframe {
-    position: relative;
-    top: -40px;
-    border: none;
+.cs-txt {
+    color: #005a66;
+    font-family: arial,verdana;
+    font-size: 22px;
+    margin: 4px 4px 4px 12px;
+}
+.cs-txt h2 {
+    color: #364d1d;
+    font-weight: bold;
+    margin-bottom: -15px;
+}
+.cs-txt h3 {
+    color: #a66300;
+    font-size: 18px;
+    text-space: 5px;
+    font-weight: bold;
+}
+.cs-img {
+    border: solid 2px #364d1d;
+    margin: 4px 2px 4px 2px;
+}
+.display_archive {
+    margin: 4px 4px 4px 10px;
+    color: #243313;
+    font-family: arial,verdana;
+    font-size: 16px;
+}
+.campaign {
+    line-height: 125%; margin: 5px;
+}
+.campaign a {
+    color: #007c8c;
+}
+.cs-bg {
+    /*background-color: #486626;*/
+    background-image: url("/glos/features/horsley-community-shop/img/veg.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: top left;
     display: block;
-    width: 900px;
-    height: 900px;
-    z-index: 4;
+    height: 500px;
 }
