Updated the title and description for home page

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,10 +8,15 @@
 <html ng-app="horsley">
 	<head>
 		<meta charset="utf-8">
-		<meta name="Description" CONTENT="The community website for Horsley, Gloucestershire">
+		<meta name="Description" CONTENT="This is the website for the Cotswold villages of
+		Horsley Parish, Gloucestershire. We are a thriving, rural community, with a rich history
+ 		and a colourful reputation for doing things in a uniquely 'Horsley' way. This community includes:
+		Horsley, Tickmorend, Sugley, Downend, Nupend, Tiltupsend, Washpool, Wallow Green, the Fooks,
+		part of Rockness, Sandgrove, Lower &amp; Upper Lutheridge, Hartley Bridge, Hay Lane and Barton End">
+
 		<meta name="google-site-verification" content="nbyjTQkiGZlYdvNNLwxiTv5uk3HI5SMP-PIQtP-msZQ" />
 
-		<title>Horsley (Gloucestershire) Community website</title>
+		<title>Horsley Parish (Gloucestershire)</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width"/>
 
