--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,10 +8,10 @@
 <html ng-app="horsley">
 	<head>
 		<meta charset="utf-8">
-		<meta name="Description" CONTENT="The community website for Horsley Parish, Gloucestershire">
+		<meta name="Description" CONTENT="The community website for Horsley, Gloucestershire">
 		<meta name="google-site-verification" content="nbyjTQkiGZlYdvNNLwxiTv5uk3HI5SMP-PIQtP-msZQ" />
 
-		<title>Horsley Parish, Gloucestershire, Community website</title>
+		<title>Horsley (Gloucestershire) Community website</title>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width"/>
 
