WIP: ADDED PDF.JS AND STARTED BUILDING VIEWER, BUT NOT WORKING AS YET

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -45,6 +45,7 @@
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("moment.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("postscribe.min.js"))'></script>
 		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("4.10.2/d3.min.js"))'></script>
+		<script type="text/javascript" src='@routes.WebJarAssets.at(webJarAssets.locate("pdf.js"))'></script>
 
 		<script type="text/javascript" src='@routes.Assets.at("js/controllers.module.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("js/services.module.js")'></script>
