css changes to pdf canvas

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -122,7 +122,9 @@
 		<link rel="stylesheet" href='@routes.Assets.at("admin/users/users.css")'/>
 
 		<!-- BubbleChart-Page -->
+		<link rel="stylesheet" href='@routes.Assets.at("features/bubble-chart/bubble-chart.css")'/>
 		<script type="text/javascript" src='@routes.Assets.at("features/bubble-chart/bubble-chart.controller.js")'></script>
+
 
 	</head>
 
