Website changes, as proposed by Marianne

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -109,6 +109,10 @@
 		<script type="text/javascript" src='@routes.Assets.at("features/parish-council/parish-council.controller.js")'></script>
 		<script type="text/javascript" src='@routes.Assets.at("features/parish-council/parish-council.services.js")'></script>
 
+			<!-- Church and Cemetery -->
+		<link rel="stylesheet" href='@routes.Assets.at("features/church-and-cemetery/church-and-cemetery.css")'/>
+		<script type="text/javascript" src='@routes.Assets.at("features/church-and-cemetery/church-and-cemetery.controller.js")'></script>
+
 		<!-- Animated bird -->
 		<link rel="stylesheet" href='@routes.Assets.at("features/animated-bird/animated-bird.css")'/>
 		<script type="text/javascript" src='@routes.Assets.at("features/animated-bird/animated-bird.directive.js")'></script>
